--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: required
 language: java
 
+services:
+  - docker
+
 script:
   - ls
   - mkdir sl
@@ -8,3 +11,5 @@ script:
   - git clone -b develop https://cuitaocrazy:cuitao800505@gitee.com/yada-kitten/shouftOfficialWebsite.git
   - cd shouftOfficialWebsite
   - mvn package
+  - cd ..
+  - docker build -t cuitaocrazy/shouftOfficialWebsite .
