--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
   - git clone -b develop $CLONE_URL
   - cd shouftOfficialWebsite
   - "sed -i 's/ddl-auto: none/ddl-auto: update/' src/main/resources/application.yml"
+  - "sed -i 's/localhost:3306/mysql:3306/' src/main/resources/application.yml"
   - mvn package
   - cd ..
   - echo "$DOCKERHUB_PWD" | docker login -u cuitaocrazy --password-stdin
