--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 script:
   - git clone -b develop $CLONE_URL
   - cd shouftOfficialWebsite
-  - "sed -i 's/ddl-auto: none/ddl-auto: update/' src/main/resources/application.yml"
+  # - "sed -i 's/ddl-auto: none/ddl-auto: update/' src/main/resources/application.yml"
   - "sed -i 's/localhost:3306/mysql:3306/' src/main/resources/application.yml"
   - mvn package
   - cd ..
